@@ -98,25 +98,13 @@ class Elastica_Type implements Elastica_Searchable
         if (null === $document->getId()) {
             throw new Elastica_Exception_Invalid('Document id is not set');
         }
-
-        $path =  $document->getId() . '/_update';
-
-        if (!isset($options['retry_on_conflict'])) {
-            $retryOnConflict = $this->getIndex()->getClient()->getConfig("retryOnConflict");
-            $options['retry_on_conflict'] = $retryOnConflict;
-        }
-
-        if ($document->hasScript()) {
-            $requestData = $document->getScript()->toArray();
-            $documentData = $document->getData();
-            if (!empty($documentData)) {
-                $requestData['upsert'] = $documentData;
-            }
-        } else {
-            $requestData = array('doc' => $document->getData());
-        }
-
-        return $this->request($path, Elastica_Request::POST, $requestData, $options);
+        return $this->getIndex()->getClient()->updateDocument(
+            $document->getId(),
+            $document,
+            $this->getIndex()->getName(),
+            $this->getName(),
+            $options
+        );
     }
 
     /**
